Update git config

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npx playwright test"
   },
   "keywords": [],
-  "author": "",
+  "author": "Mahesh Y",
   "license": "ISC",
   "description": "",
   "dependencies": {
